added timeBudget option